# tychosdk-emulator

./: .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  package.json  tsconfig.json
.github/workflows/: cd.yml
core/: Cargo.toml  build.rs
core/res/: ton_config.boc  tycho_config.boc
core/src/: lib.rs  models.rs  native.rs  subscriber.rs  tvm_emulator.rs  tx_emulator.rs  util.rs  wasm.rs
core/src/native/: mod.rs
core/src/wasm/: mod.rs
examples/native/: CMakeLists.txt  main.c
ffi/: emulator.h
scripts/: build-wasm.sh  build_wasm.sh  pack-config.ts
src/: ffi_export.rs  global.ts  index.ts  lib.rs  models.rs  native.rs  nodejs.ts  tvm_emulator.rs  util.rs
src/blockchain/: BlockchainStorage.spec.ts  BlockchainStorage.ts
src/config/: defaultConfig.ts
src/executor/: Executor.spec.ts  Executor.ts
src/native/: mod.rs  models.rs
src/utils/: globalId.spec.ts  globalId.ts  sign.spec.ts  sign.ts
