[workspace]
resolver = "2"
members = ["core"]

[profile.release]
lto = true
panic = "abort"
incremental = false
codegen-units = 1
opt-level = 3

[patch.crates-io]
# patch here
tycho-executor = { git = "https://github.com/broxus/tycho-vm.git", rev = "b867864c49d62470bf9e5816801c4e180c189ec2" }
tycho-vm = { git = "https://github.com/broxus/tycho-vm.git", rev = "b867864c49d62470bf9e5816801c4e180c189ec2" }
