[workspace]
resolver = "2"
members = ["core"]

[profile.release]
lto = true
panic = "abort"
incremental = false
codegen-units = 1
opt-level = 3

[patch.crates-io]
# patch here
tycho-executor = { git = "https://github.com/broxus/tycho-vm.git", rev = "f66e325153b977be92788ad13cdd4aa79413ac4d" }
tycho-vm = { git = "https://github.com/broxus/tycho-vm.git", rev = "f66e325153b977be92788ad13cdd4aa79413ac4d" }
