[workspace]
resolver = "2"
members = ["core"]

[profile.release]
lto = true
panic = "abort"
incremental = false
codegen-units = 1
opt-level = 3

[patch.crates-io]
# patch here
tycho-executor = { git = "https://github.com/broxus/tycho-vm.git", rev = "efea859fa853a5b8317344e4b8afac7f0a678b7e" }
tycho-vm = { git = "https://github.com/broxus/tycho-vm.git", rev = "efea859fa853a5b8317344e4b8afac7f0a678b7e" }
