[package]
name = "tycho-emulator"
description = "A Tycho executor emulator."
repository = "https://github.com/broxus/tycho-emulator"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.11"
anyhow = "1.0"
bumpalo = { version = "3.17", default-features = false }
cfg-if = "1.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.77"
log = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["std"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Performance"] }

everscale-types = { version = "0.1.2", default-features = false, features = [
    "sync",
    "serde",
    "base64",
] }
tycho-executor = { git = "https://github.com/broxus/tycho-vm.git", rev = "c224351e576375430f4a2d66207406998d189946" }
tycho-vm = { git = "https://github.com/broxus/tycho-vm.git", features = [
    "tracing",
], rev = "c224351e576375430f4a2d66207406998d189946" }

[build-dependencies]
anyhow = "1.0"
