[package]
name = "tycho-emulator"
description = "A Tycho executor emulator."
repository = "https://github.com/broxus/tycho-emulator"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
version = "0.2.4"
edition = "2024"
license = "MIT OR Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ahash = "0.8.12"
anyhow = "1.0"
cfg-if = "1.0"
getrandom = "0.3.3"
js-sys = "0.3.77"
libc = { version = "0.2.177", optional = true }
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["std"] }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3.77", features = ["Performance"], optional = true }

tycho-types = { version = "0.3.0", default-features = false, features = [
    "sync",
    "serde",
    "base64",
] }
tycho-executor = { version = "0.3.0" }
tycho-vm = { version = "0.3.0", features = ["tracing"] }

[build-dependencies]
anyhow = "1.0"

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:web-sys", "getrandom/wasm_js"]
native = ["dep:libc"]
